# Reverb

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: EQ.h  EnvelopeShaper.h  GranularEngine.h  Limiter.h  Oversampler.h  ReverbEngine.h  ReverseBuffer.h  Saturation.h  TransientDetector.h
Source/GUI/: Knob.h  MainComponent.cpp  MainComponent.h  Meter.h  ModeSelector.h  WaveformDisplay.h
Source/Utils/: LookAndFeel.h  Parameters.h  PresetManager.h  SmartDetector.h  TempoSync.h
